@@ -1,4 +1,5 @@
 Sigil 0.6.0 TBA
+    - Implement issue 1450: View classes used in HTML files.
     - Implement issue 102: View details of all HTML files
     - Implement issue 839: Word Count (in View HTML details)
     - Implement issue 1392: View details of all images
